# CoreFighter

./: .gitignore  LICENSE  README.md  pytest.ini
frontend/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/api/: auth.ts  client.ts
frontend/src/app/: App.tsx  AuthContext.tsx  GuestRoute.tsx  ProtectedRoute.tsx
frontend/src/components/: CardTile.tsx  Navbar.tsx
frontend/src/pages/: DeckDetail.tsx  Home.tsx  Login.tsx  Logout.tsx  NotFound.tsx  Profile.tsx
frontend/src/types/: index.ts
server/: pyproject.toml
server/deckbuilder/: conftest.py  manage.py
server/deckbuilder/deckbuilder/: asgi.py  settings.py  urls.py  wsgi.py
server/deckbuilder/deckbuilder/constants/: card_data.py
server/deckbuilder/decks/: factories.py  models.py  serializers.py  urls.py  views.py
server/deckbuilder/decks/migrations/: 0001_initial.py  0002_prep_zone_for_json.py  0003_alter_gundamcard_zone_decklist.py  0004_rename_colors_decklist_colours_and_more.py  0005_alter_decklist_vote_count.py
server/deckbuilder/decks/tests/: helpers.py  test_decks_api_pytest.py
